--- a/qcy/OOPSevaluation/oopsEval.html
+++ b/qcy/OOPSevaluation/oopsEval.html
@@ -74,12 +74,36 @@ P08. Missing annotations<span style="float: right;">1 case detected. <span class
 <div class="panel-heading">
 <h4 class="panel-title">
 <a data-toggle="collapse" href="#collapse1">
-P13. Inverse relationships not explicitly declared<span style="float: right;">9 cases detected. <span class="label label-minor">Minor</span></span></a>
+P11. Missing domain or range in properties<span style="float: right;">1 case detected. <span class="label label-warning">Important</span></span></a>
 </h4>
 </div>
 <div id="collapse1" class="panel-collapse collapse">
 <div class="panel-body">
-<p>This pitfall appears when any relationship (except for those that are defined as symmetric properties using owl:SymmetricProperty) does not have an inverse relationship (owl:inverseOf) defined within the ontology.	</p><p>This pitfall affects to the following ontology elements: </p><ul><li><a href=""https://qaecy.com/dev/ont#hasProperty"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#hasProperty"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#mentions"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#mentions"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#resolvesTo"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#resolvesTo"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#about"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#about"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#containsFragment"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#containsFragment"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#selectorSubject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorSubject"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#relatedEntity"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#relatedEntity"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#hasFileLocation"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#hasFileLocation"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI</a></li></ul></div>
+<p>Object and/or datatype properties without domain or range (or none of them) are included in the ontology. 	</p><p>This pitfall affects to the following ontology elements: </p><ul><li><a href=""https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI</a></li></ul></div>
+</div>
+</div>
+<div class="panel panel-default">
+<div class="panel-heading">
+<h4 class="panel-title">
+<a data-toggle="collapse" href="#collapse2">
+P13. Inverse relationships not explicitly declared<span style="float: right;">9 cases detected. <span class="label label-minor">Minor</span></span></a>
+</h4>
+</div>
+<div id="collapse2" class="panel-collapse collapse">
+<div class="panel-body">
+<p>This pitfall appears when any relationship (except for those that are defined as symmetric properties using owl:SymmetricProperty) does not have an inverse relationship (owl:inverseOf) defined within the ontology.	</p><p>This pitfall affects to the following ontology elements: </p><ul><li><a href=""https://qaecy.com/dev/ont#resolvesTo"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#resolvesTo"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#mentions"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#mentions"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#hasProperty"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#hasProperty"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#relatedEntity"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#relatedEntity"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#containsFragment"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#containsFragment"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#about"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#about"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#hasFileLocation"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#hasFileLocation"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#selectorSubject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorSubject"^^xsd:anyURI</a></li></ul></div>
+</div>
+</div>
+<div class="panel panel-default">
+<div class="panel-heading">
+<h4 class="panel-title">
+<a data-toggle="collapse" href="#collapse3">
+P19. Defining multiple domains or ranges in properties<span style="float: right;">1 case detected. <span class="label label-danger">Critical</span></span></a>
+</h4>
+</div>
+<div id="collapse3" class="panel-collapse collapse">
+<div class="panel-body">
+<p>The domain or range (or both) of a property (relationships and attributes) is defined by stating more than one rdfs:domain or rdfs:range statements. In OWL multiple rdfs:domain or rdfs:range axioms are allowed, but they are interpreted as conjunction, being, therefore, equivalent to the construct owl:intersectionOf. This pitfall is related to the common error that appears when defining domains and ranges described in [7].	</p><p>This pitfall affects to the following ontology elements: </p><ul><li><a href=""https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI</a></li></ul></div>
 </div>
 </div>
 </div>
