Added selectors as subclasses

--- a/qcy/sections/overview-en.html
+++ b/qcy/sections/overview-en.html
@@ -6,12 +6,22 @@ This ontology has the following classes and properties.</span>
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
+      <a href="#BBoxSelector" title="https://qaecy.com/dev/ont#BBoxSelector">Bounding Box Selector</a>
+   </li>
+   <li>
       <a href="#CanonicalEntity" title="https://qaecy.com/dev/ont#CanonicalEntity">Canonical Entity</a>
    </li>
    <li>
-      <a href="#EntityMention" title="https://qaecy.com/dev/ont#EntityMention">
-         <span>Entity Mention</span>
-      </a>
+      <a href="#Category" title="https://qaecy.com/dev/ont#Category">Category</a>
+   </li>
+   <li>
+      <a href="#DocumentPage" title="https://qaecy.com/dev/ont#DocumentPage">Document Page</a>
+   </li>
+   <li>
+      <a href="#EntityMention" title="https://qaecy.com/dev/ont#EntityMention">Entity Mention</a>
+   </li>
+   <li>
+      <a href="#EntityReference" title="https://qaecy.com/dev/ont#EntityReference">Entity Reference</a>
    </li>
    <li>
       <a href="#FileContent" title="https://qaecy.com/dev/ont#FileContent">File Content</a>
@@ -23,16 +33,34 @@ This ontology has the following classes and properties.</span>
       <a href="#Fragment" title="https://qaecy.com/dev/ont#Fragment">Fragment</a>
    </li>
    <li>
+      <a href="#IDSelector" title="https://qaecy.com/dev/ont#IDSelector">ID Selector</a>
+   </li>
+   <li>
+      <a href="#IFCExpressIDSelector" title="https://qaecy.com/dev/ont#IFCExpressIDSelector">IFC Express ID Selector</a>
+   </li>
+   <li>
+      <a href="#IFCGlobalIDSelector" title="https://qaecy.com/dev/ont#IFCGlobalIDSelector">IFC Global ID Selector</a>
+   </li>
+   <li>
       <a href="#InformationObject" title="https://qaecy.com/dev/ont#InformationObject">Information Object</a>
    </li>
    <li>
-      <a href="#ProjectEntity" title="https://qaecy.com/dev/ont#ProjectEntity">Project Entity</a>
+      <a href="#PageSelector" title="https://qaecy.com/dev/ont#PageSelector">Page Selector</a>
    </li>
    <li>
       <a href="#Property" title="https://qaecy.com/dev/ont#Property">Property</a>
    </li>
    <li>
       <a href="#Selector" title="https://qaecy.com/dev/ont#Selector">Selector</a>
+   </li>
+   <li>
+      <a href="#TextDirectiveSelector" title="https://qaecy.com/dev/ont#TextDirectiveSelector">Text Directive Selector</a>
+   </li>
+   <li>
+      <a href="#TextIndexSelector" title="https://qaecy.com/dev/ont#TextIndexSelector">Text Index Selector</a>
+   </li>
+   <li>
+      <a href="#TimeRangeSelector" title="https://qaecy.com/dev/ont#TimeRangeSelector">Time Range Selector</a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -69,5 +97,20 @@ This ontology has the following classes and properties.</span>
     class="hlist">
    <li>
       <a href="#explicit" title="https://qaecy.com/dev/ont#explicit">explicit</a>
+   </li>
+   <li>
+      <a href="#filePath" title="https://qaecy.com/dev/ont#filePath">file path</a>
+   </li>
+   <li>
+      <a href="#label" title="https://qaecy.com/dev/ont#label">label</a>
+   </li>
+   <li>
+      <a href="#tag" title="https://qaecy.com/dev/ont#tag">tag</a>
+   </li>
+   <li>
+      <a href="#textSummary" title="https://qaecy.com/dev/ont#textSummary">text summary</a>
+   </li>
+   <li>
+      <a href="#value" title="https://qaecy.com/dev/ont#value">value</a>
    </li>
 </ul><iframe src="webvowl/index.html"></iframe> 
