Removed outdated stuff

--- a/qcy/sections/crossref-en.html
+++ b/qcy/sections/crossref-en.html
@@ -5,7 +5,7 @@ This section provides details for each class and property defined by The QAECY O
  <ul class="hlist">
   <li><a href="#BBoxSelector" title="https://qaecy.com/dev/ont#BBoxSelector">Bounding Box Selector</a></li>
   <li><a href="#CanonicalEntity" title="https://qaecy.com/dev/ont#CanonicalEntity">Canonical Entity</a></li>
-  <li><a href="#Category" title="https://qaecy.com/dev/ont#Category">Category</a></li>
+  <li><a href="#Category" title="https://qaecy.com/dev/ont#Category"> <span>Category</span> </a></li>
   <li><a href="#DocumentPage" title="https://qaecy.com/dev/ont#DocumentPage">Document Page</a></li>
   <li><a href="#EntityMention" title="https://qaecy.com/dev/ont#EntityMention">Entity Mention</a></li>
   <li><a href="#EntityReference" title="https://qaecy.com/dev/ont#EntityReference">Entity Reference</a></li>
@@ -74,9 +74,6 @@ This section provides details for each class and property defined by The QAECY O
  <div class="entity" id="Category">
   <h3>Category<sup class="type-c" title="class">c</sup> <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#classes">Class ToC</a> </span></h3>
   <p><strong>IRI:</strong> https://qaecy.com/dev/ont#Category</p>
-  <div class="comment">
-   <span class="markdown">A Category is an abstract class that holds specific categories/types used to describe any resource. The qcy:Category should not be used directly as there are specific categories defined for specific scopes.</span>
-  </div>
   <dl class="description">
    <dt>
     is disjoint with
