--- a/qcy/sections/overview-en.html
+++ b/qcy/sections/overview-en.html
@@ -12,7 +12,9 @@ This ontology has the following classes and properties.</span>
       <a href="#CanonicalEntity" title="https://qaecy.com/dev/ont#CanonicalEntity">Canonical Entity</a>
    </li>
    <li>
-      <a href="#Category" title="https://qaecy.com/dev/ont#Category">Category</a>
+      <a href="#Category" title="https://qaecy.com/dev/ont#Category">
+         <span>Category</span>
+      </a>
    </li>
    <li>
       <a href="#DocumentPage" title="https://qaecy.com/dev/ont#DocumentPage">Document Page</a>
