--- a/qcy/OOPSevaluation/oopsEval.html
+++ b/qcy/OOPSevaluation/oopsEval.html
@@ -74,10 +74,22 @@ P04. Creating unconnected ontology elements<span style="float: right;">1 case de
 <div class="panel-heading">
 <h4 class="panel-title">
 <a data-toggle="collapse" href="#collapse1">
-P11. Missing domain or range in properties<span style="float: right;">1 case detected. <span class="label label-warning">Important</span></span></a>
+P08. Missing annotations<span style="float: right;">1 case detected. <span class="label label-minor">Minor</span></span></a>
 </h4>
 </div>
 <div id="collapse1" class="panel-collapse collapse">
+<div class="panel-body">
+<p>This pitfall consists in creating an ontology element and failing to provide human readable annotations attached to it. Consequently, ontology elements lack annotation properties that label them (e.g. rdfs:label, lemon:LexicalEntry, skos:prefLabel or skos:altLabel) or that define them (e.g. rdfs:comment or dc:description). This pitfall is related to the guidelines provided in [5].	</p><p>This pitfall affects to the following ontology elements: </p><ul><li><a href=""https://qaecy.com/dev/ont#Category"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#Category"^^xsd:anyURI</a></li></ul></div>
+</div>
+</div>
+<div class="panel panel-default">
+<div class="panel-heading">
+<h4 class="panel-title">
+<a data-toggle="collapse" href="#collapse2">
+P11. Missing domain or range in properties<span style="float: right;">1 case detected. <span class="label label-warning">Important</span></span></a>
+</h4>
+</div>
+<div id="collapse2" class="panel-collapse collapse">
 <div class="panel-body">
 <p>Object and/or datatype properties without domain or range (or none of them) are included in the ontology. 	</p><p>This pitfall affects to the following ontology elements: </p><ul><li><a href=""https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI</a></li></ul></div>
 </div>
@@ -85,23 +97,23 @@ P11. Missing domain or range in properties<span style="float: right;">1 case det
 <div class="panel panel-default">
 <div class="panel-heading">
 <h4 class="panel-title">
-<a data-toggle="collapse" href="#collapse2">
+<a data-toggle="collapse" href="#collapse3">
 P13. Inverse relationships not explicitly declared<span style="float: right;">9 cases detected. <span class="label label-minor">Minor</span></span></a>
 </h4>
 </div>
-<div id="collapse2" class="panel-collapse collapse">
+<div id="collapse3" class="panel-collapse collapse">
 <div class="panel-body">
-<p>This pitfall appears when any relationship (except for those that are defined as symmetric properties using owl:SymmetricProperty) does not have an inverse relationship (owl:inverseOf) defined within the ontology.	</p><p>This pitfall affects to the following ontology elements: </p><ul><li><a href=""https://qaecy.com/dev/ont#containsFragment"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#containsFragment"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#hasFileLocation"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#hasFileLocation"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#hasProperty"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#hasProperty"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#resolvesTo"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#resolvesTo"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#mentions"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#mentions"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#relatedEntity"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#relatedEntity"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#about"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#about"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#selectorSubject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorSubject"^^xsd:anyURI</a></li></ul></div>
+<p>This pitfall appears when any relationship (except for those that are defined as symmetric properties using owl:SymmetricProperty) does not have an inverse relationship (owl:inverseOf) defined within the ontology.	</p><p>This pitfall affects to the following ontology elements: </p><ul><li><a href=""https://qaecy.com/dev/ont#about"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#about"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#relatedEntity"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#relatedEntity"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#mentions"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#mentions"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#resolvesTo"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#resolvesTo"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#selectorSubject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorSubject"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#hasFileLocation"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#hasFileLocation"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#containsFragment"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#containsFragment"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#hasProperty"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#hasProperty"^^xsd:anyURI</a></li><li><a href=""https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI</a></li></ul></div>
 </div>
 </div>
 <div class="panel panel-default">
 <div class="panel-heading">
 <h4 class="panel-title">
-<a data-toggle="collapse" href="#collapse3">
+<a data-toggle="collapse" href="#collapse4">
 P19. Defining multiple domains or ranges in properties<span style="float: right;">1 case detected. <span class="label label-danger">Critical</span></span></a>
 </h4>
 </div>
-<div id="collapse3" class="panel-collapse collapse">
+<div id="collapse4" class="panel-collapse collapse">
 <div class="panel-body">
 <p>The domain or range (or both) of a property (relationships and attributes) is defined by stating more than one rdfs:domain or rdfs:range statements. In OWL multiple rdfs:domain or rdfs:range axioms are allowed, but they are interpreted as conjunction, being, therefore, equivalent to the construct owl:intersectionOf. This pitfall is related to the common error that appears when defining domains and ranges described in [7].	</p><p>This pitfall affects to the following ontology elements: </p><ul><li><a href=""https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI" target="_blank">"https://qaecy.com/dev/ont#selectorObject"^^xsd:anyURI</a></li></ul></div>
 </div>
