Added some datatype properties and loosened restriction on hasFileLocation to include all information objects such that fragments can also have file locations

--- a/qcy/sections/overview-en.html
+++ b/qcy/sections/overview-en.html
@@ -6,9 +6,6 @@ This ontology has the following classes and properties.</span>
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
-      <a href="#BBoxSelector" title="https://qaecy.com/dev/ont#BBoxSelector">Bounding Box Selector</a>
-   </li>
-   <li>
       <a href="#CanonicalEntity" title="https://qaecy.com/dev/ont#CanonicalEntity">Canonical Entity</a>
    </li>
    <li>
@@ -17,7 +14,7 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#DocumentPage" title="https://qaecy.com/dev/ont#DocumentPage">Document Page</a>
+      <a href="#DocumentPageFragment" title="https://qaecy.com/dev/ont#DocumentPageFragment">Document Page Fragment</a>
    </li>
    <li>
       <a href="#EntityMention" title="https://qaecy.com/dev/ont#EntityMention">Entity Mention</a>
@@ -44,6 +41,9 @@ This ontology has the following classes and properties.</span>
       <a href="#IFCGlobalIDSelector" title="https://qaecy.com/dev/ont#IFCGlobalIDSelector">IFC Global ID Selector</a>
    </li>
    <li>
+      <a href="#ImageFragment" title="https://qaecy.com/dev/ont#ImageFragment">Image Fragment</a>
+   </li>
+   <li>
       <a href="#InformationObject" title="https://qaecy.com/dev/ont#InformationObject">Information Object</a>
    </li>
    <li>
@@ -56,13 +56,22 @@ This ontology has the following classes and properties.</span>
       <a href="#Selector" title="https://qaecy.com/dev/ont#Selector">Selector</a>
    </li>
    <li>
+      <a href="#TableFragment" title="https://qaecy.com/dev/ont#TableFragment">Table Fragment</a>
+   </li>
+   <li>
       <a href="#TextDirectiveSelector" title="https://qaecy.com/dev/ont#TextDirectiveSelector">Text Directive Selector</a>
+   </li>
+   <li>
+      <a href="#TextFragment" title="https://qaecy.com/dev/ont#TextFragment">Text Fragment</a>
    </li>
    <li>
       <a href="#TextIndexSelector" title="https://qaecy.com/dev/ont#TextIndexSelector">Text Index Selector</a>
    </li>
    <li>
       <a href="#TimeRangeSelector" title="https://qaecy.com/dev/ont#TimeRangeSelector">Time Range Selector</a>
+   </li>
+   <li>
+      <a href="#XYWHSelector" title="https://qaecy.com/dev/ont#XYWHSelector">XYWH Selector</a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -107,7 +116,19 @@ This ontology has the following classes and properties.</span>
       <a href="#label" title="https://qaecy.com/dev/ont#label">label</a>
    </li>
    <li>
+      <a href="#language" title="https://qaecy.com/dev/ont#language">language</a>
+   </li>
+   <li>
+      <a href="#tableGrid" title="https://qaecy.com/dev/ont#tableGrid">table grid</a>
+   </li>
+   <li>
       <a href="#tag" title="https://qaecy.com/dev/ont#tag">tag</a>
+   </li>
+   <li>
+      <a href="#textFormatted" title="https://qaecy.com/dev/ont#textFormatted">text formatted</a>
+   </li>
+   <li>
+      <a href="#textRaw" title="https://qaecy.com/dev/ont#textRaw">text raw</a>
    </li>
    <li>
       <a href="#textSummary" title="https://qaecy.com/dev/ont#textSummary">text summary</a>
