Added datatype properties and fixed an enum

--- a/qcy-e/sections/overview-en.html
+++ b/qcy-e/sections/overview-en.html
@@ -44,7 +44,7 @@ This ontology has the following classes and properties.</span>
       <a href="#Drawing" title="https://qaecy.com/dev/enum#Drawing">Drawing</a>
    </li>
    <li>
-      <a href="#Email" title="https://qaecy.com/dev/enum#Email">Email</a>
+      <a href="#EmailAddress" title="https://qaecy.com/dev/enum#EmailAddress">Email Address</a>
    </li>
    <li>
       <a href="#Equipment" title="https://qaecy.com/dev/enum#Equipment">Equipment</a>
