--- a/qcy/sections/overview-en.html
+++ b/qcy/sections/overview-en.html
@@ -87,8 +87,18 @@ This ontology has the following classes and properties.</span>
       <a href="#about" title="https://qaecy.com/dev/ont#about">about</a>
    </li>
    <li>
+      <a href="#adjacentElement" title="https://qaecy.com/dev/ont#adjacentElement">
+         <span>adjacent element</span>
+      </a>
+   </li>
+   <li>
       <a href="#alternativeRepresentation"
          title="https://qaecy.com/dev/ont#alternativeRepresentation">alternative representation</a>
+   </li>
+   <li>
+      <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">
+         <span>contains element</span>
+      </a>
    </li>
    <li>
       <a href="#containsFloor" title="https://qaecy.com/dev/ont#containsFloor">
@@ -114,11 +124,6 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#hasFileLocation" title="https://qaecy.com/dev/ont#hasFileLocation">has file location</a>
-   </li>
-   <li>
-      <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">
-         <span>has floor</span>
-      </a>
    </li>
    <li>
       <a href="#hasProperty" title="https://qaecy.com/dev/ont#hasProperty">has property</a>
@@ -165,6 +170,12 @@ This ontology has the following classes and properties.</span>
       <a href="#language" title="https://qaecy.com/dev/ont#language">language</a>
    </li>
    <li>
+      <a href="#mime" title="https://qaecy.com/dev/ont#mime">mime</a>
+   </li>
+   <li>
+      <a href="#openFormat" title="https://qaecy.com/dev/ont#openFormat">open format</a>
+   </li>
+   <li>
       <a href="#tableGrid" title="https://qaecy.com/dev/ont#tableGrid">table grid</a>
    </li>
    <li>
@@ -183,6 +194,16 @@ This ontology has the following classes and properties.</span>
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
+      <a href="#adjacentElement" title="https://qaecy.com/dev/ont#adjacentElement">
+         <span>adjacent element</span>
+      </a>
+   </li>
+   <li>
+      <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">
+         <span>contains element</span>
+      </a>
+   </li>
+   <li>
       <a href="#containsFloor" title="https://qaecy.com/dev/ont#containsFloor">
          <span>contains floor</span>
       </a>
@@ -190,11 +211,6 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#containsSpace" title="https://qaecy.com/dev/ont#containsSpace">
          <span>contains space</span>
-      </a>
-   </li>
-   <li>
-      <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">
-         <span>has floor</span>
       </a>
    </li>
 </ul><iframe src="webvowl/index.html"></iframe> 
