New properties + schema annotations

--- a/qcy-e/sections/overview-en.html
+++ b/qcy-e/sections/overview-en.html
@@ -11,6 +11,12 @@ This ontology has the following classes and properties.</span>
       <a href="#Activity" title="https://qaecy.com/dev/enum#Activity">Activity</a>
    </li>
    <li>
+      <a href="#AWS" title="https://qaecy.com/dev/enum#AWS">Amazon Web Services</a>
+   </li>
+   <li>
+      <a href="#Azure" title="https://qaecy.com/dev/enum#Azure">Azure</a>
+   </li>
+   <li>
       <a href="#Balcony" title="https://qaecy.com/dev/enum#Balcony">Balcony</a>
    </li>
    <li>
@@ -24,6 +30,9 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#BuildingElement" title="https://qaecy.com/dev/enum#BuildingElement">Building Element</a>
+   </li>
+   <li>
+      <a href="#BuildingPermit" title="https://qaecy.com/dev/enum#BuildingPermit">Building Permit</a>
    </li>
    <li>
       <a href="#CADFileContent" title="https://qaecy.com/dev/enum#CADFileContent">CAD File Content</a>
@@ -54,6 +63,12 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#Floor" title="https://qaecy.com/dev/enum#Floor">Floor</a>
+   </li>
+   <li>
+      <a href="#GCP" title="https://qaecy.com/dev/enum#GCP">Google Cloud Platform</a>
+   </li>
+   <li>
+      <a href="#LocalProvider" title="https://qaecy.com/dev/enum#LocalProvider">Local provider</a>
    </li>
    <li>
       <a href="#Location" title="https://qaecy.com/dev/enum#Location">Location</a>
