Fixed missing comments

--- a/qcy/sections/overview-en.html
+++ b/qcy/sections/overview-en.html
@@ -6,135 +6,88 @@ This ontology has the following classes and properties.</span>
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
-      <a href="#CanonicalEntity" title="https://qaecy.com/dev/ont#CanonicalEntity">
-         <span>Canonical Entity</span>
-      </a>
+      <a href="#CanonicalEntity" title="https://qaecy.com/dev/ont#CanonicalEntity">Canonical Entity</a>
    </li>
    <li>
-      <a href="#Category" title="https://qaecy.com/dev/ont#Category">
-         <span>Category</span>
-      </a>
+      <a href="#Category" title="https://qaecy.com/dev/ont#Category">Category</a>
    </li>
    <li>
-      <a href="#ContentCategory" title="https://qaecy.com/dev/ont#ContentCategory">
-         <span>Content Category</span>
-      </a>
+      <a href="#ContentCategory" title="https://qaecy.com/dev/ont#ContentCategory">Content Category</a>
    </li>
    <li>
-      <a href="#DocumentPageFragment" title="https://qaecy.com/dev/ont#DocumentPageFragment">
-         <span>Document Page Fragment</span>
-      </a>
+      <a href="#DocumentPageFragment" title="https://qaecy.com/dev/ont#DocumentPageFragment">Document Page Fragment</a>
    </li>
    <li>
-      <a href="#EntityCategory" title="https://qaecy.com/dev/ont#EntityCategory">
-         <span>Entity Category</span>
-      </a>
+      <a href="#EntityCategory" title="https://qaecy.com/dev/ont#EntityCategory">Entity Category</a>
    </li>
    <li>
-      <a href="#EntityMention" title="https://qaecy.com/dev/ont#EntityMention">
-         <span>Entity Mention</span>
-      </a>
+      <a href="#EntityMention" title="https://qaecy.com/dev/ont#EntityMention">Entity Mention</a>
    </li>
    <li>
-      <a href="#EntityReference" title="https://qaecy.com/dev/ont#EntityReference">
-         <span>Entity Reference</span>
-      </a>
+      <a href="#EntityReference" title="https://qaecy.com/dev/ont#EntityReference">Entity Reference</a>
    </li>
    <li>
-      <a href="#FileContent" title="https://qaecy.com/dev/ont#FileContent">
-         <span>File Content</span>
-      </a>
+      <a href="#FileContent" title="https://qaecy.com/dev/ont#FileContent">File Content</a>
    </li>
    <li>
-      <a href="#FileLocation" title="https://qaecy.com/dev/ont#FileLocation">
-         <span>File Location</span>
-      </a>
+      <a href="#FileLocation" title="https://qaecy.com/dev/ont#FileLocation">File Location</a>
    </li>
    <li>
-      <a href="#Fragment" title="https://qaecy.com/dev/ont#Fragment">
-         <span>Fragment</span>
-      </a>
+      <a href="#Fragment" title="https://qaecy.com/dev/ont#Fragment">Fragment</a>
    </li>
    <li>
-      <a href="#IDSelector" title="https://qaecy.com/dev/ont#IDSelector">
-         <span>ID Selector</span>
-      </a>
+      <a href="#IDSelector" title="https://qaecy.com/dev/ont#IDSelector">ID Selector</a>
    </li>
    <li>
-      <a href="#IFCExpressIDSelector" title="https://qaecy.com/dev/ont#IFCExpressIDSelector">
-         <span>IFC Express ID Selector</span>
-      </a>
+      <a href="#IFCExpressIDSelector" title="https://qaecy.com/dev/ont#IFCExpressIDSelector">IFC Express ID Selector</a>
    </li>
    <li>
-      <a href="#IFCGlobalIDSelector" title="https://qaecy.com/dev/ont#IFCGlobalIDSelector">
-         <span>IFC Global ID Selector</span>
-      </a>
+      <a href="#IFCGlobalIDSelector" title="https://qaecy.com/dev/ont#IFCGlobalIDSelector">IFC Global ID Selector</a>
    </li>
    <li>
-      <a href="#ImageFragment" title="https://qaecy.com/dev/ont#ImageFragment">
-         <span>Image Fragment</span>
-      </a>
+      <a href="#ImageFragment" title="https://qaecy.com/dev/ont#ImageFragment">Image Fragment</a>
    </li>
    <li>
       <a href="#InformationObject" title="https://qaecy.com/dev/ont#InformationObject">Information Object</a>
    </li>
    <li>
-      <a href="#MimeCategory" title="https://qaecy.com/dev/ont#MimeCategory">
-         <span>Mime Category</span>
-      </a>
+      <a href="#MimeCategory" title="https://qaecy.com/dev/ont#MimeCategory">Mime Category</a>
    </li>
    <li>
-      <a href="#PageSelector" title="https://qaecy.com/dev/ont#PageSelector">
-         <span>Page Selector</span>
-      </a>
+      <a href="#PageSelector" title="https://qaecy.com/dev/ont#PageSelector">Page Selector</a>
    </li>
    <li>
-      <a href="#Property" title="https://qaecy.com/dev/ont#Property">
-         <span>Property</span>
-      </a>
+      <a href="#Property" title="https://qaecy.com/dev/ont#Property">Property</a>
    </li>
    <li>
-      <a href="#ProviderType" title="https://qaecy.com/dev/ont#ProviderType">
-         <span>Provider Type</span>
-      </a>
+      <a href="#ProviderType" title="https://qaecy.com/dev/ont#ProviderType">Provider Type</a>
    </li>
    <li>
-      <a href="#TableFragment" title="https://qaecy.com/dev/ont#TableFragment">
-         <span>Table Fragment</span>
-      </a>
+      <a href="#Selector" title="https://qaecy.com/dev/ont#Selector">Selector</a>
    </li>
    <li>
-      <a href="#TextDirectiveSelector" title="https://qaecy.com/dev/ont#TextDirectiveSelector">
-         <span>Text Directive Selector</span>
-      </a>
+      <a href="#TableFragment" title="https://qaecy.com/dev/ont#TableFragment">Table Fragment</a>
    </li>
    <li>
-      <a href="#TextFragment" title="https://qaecy.com/dev/ont#TextFragment">
-         <span>Text Fragment</span>
-      </a>
+      <a href="#TextDirectiveSelector" title="https://qaecy.com/dev/ont#TextDirectiveSelector">Text Directive Selector</a>
    </li>
    <li>
-      <a href="#TextIndexSelector" title="https://qaecy.com/dev/ont#TextIndexSelector">
-         <span>Text Index Selector</span>
-      </a>
+      <a href="#TextFragment" title="https://qaecy.com/dev/ont#TextFragment">Text Fragment</a>
    </li>
    <li>
-      <a href="#TimeRangeSelector" title="https://qaecy.com/dev/ont#TimeRangeSelector">
-         <span>Time Range Selector</span>
-      </a>
+      <a href="#TextIndexSelector" title="https://qaecy.com/dev/ont#TextIndexSelector">Text Index Selector</a>
    </li>
    <li>
-      <a href="#XYWHSelector" title="https://qaecy.com/dev/ont#XYWHSelector">
-         <span>XYWH Selector</span>
-      </a>
+      <a href="#TimeRangeSelector" title="https://qaecy.com/dev/ont#TimeRangeSelector">Time Range Selector</a>
+   </li>
+   <li>
+      <a href="#XYWHSelector" title="https://qaecy.com/dev/ont#XYWHSelector">XYWH Selector</a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
-      <a href="#about" title="https://qaecy.com/dev/ont#about">
-         <span>about</span>
-      </a>
+      <a href="#about" title="https://qaecy.com/dev/ont#about">about</a>
    </li>
    <li>
       <a href="#adjacentElement" title="https://qaecy.com/dev/ont#adjacentElement">
@@ -143,21 +96,15 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#alternativeRepresentation"
-         title="https://qaecy.com/dev/ont#alternativeRepresentation">
-         <span>alternative representation</span>
-      </a>
+         title="https://qaecy.com/dev/ont#alternativeRepresentation">alternative representation</a>
    </li>
    <li>
       <a href="#applicableObjectCategories"
-         title="https://qaecy.com/dev/ont#applicableObjectCategories">
-         <span>applicable object categories</span>
-      </a>
+         title="https://qaecy.com/dev/ont#applicableObjectCategories">applicable object categories</a>
    </li>
    <li>
       <a href="#applicableSubjectCategories"
-         title="https://qaecy.com/dev/ont#applicableSubjectCategories">
-         <span>applicable subject categories</span>
-      </a>
+         title="https://qaecy.com/dev/ont#applicableSubjectCategories">applicable subject categories</a>
    </li>
    <li>
       <a href="#containsElement" title="https://qaecy.com/dev/ont#containsElement">
@@ -170,9 +117,7 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#containsFragment" title="https://qaecy.com/dev/ont#containsFragment">
-         <span>contains fragment</span>
-      </a>
+      <a href="#containsFragment" title="https://qaecy.com/dev/ont#containsFragment">contains fragment</a>
    </li>
    <li>
       <a href="#containsSpace" title="https://qaecy.com/dev/ont#containsSpace">
@@ -180,9 +125,7 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#contentCategory" title="https://qaecy.com/dev/ont#contentCategory">
-         <span>content category</span>
-      </a>
+      <a href="#contentCategory" title="https://qaecy.com/dev/ont#contentCategory">content category</a>
    </li>
    <li>
       <a href="#endDate" title="https://qaecy.com/dev/ont#endDate">
@@ -190,14 +133,10 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#entityCategory" title="https://qaecy.com/dev/ont#entityCategory">
-         <span>entity category</span>
-      </a>
+      <a href="#entityCategory" title="https://qaecy.com/dev/ont#entityCategory">entity category</a>
    </li>
    <li>
-      <a href="#hasCategory" title="https://qaecy.com/dev/ont#hasCategory">
-         <span>has category</span>
-      </a>
+      <a href="#hasCategory" title="https://qaecy.com/dev/ont#hasCategory">has category</a>
    </li>
    <li>
       <a href="#hasEmailAddress" title="https://qaecy.com/dev/ont#hasEmailAddress">
@@ -205,9 +144,7 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#hasFileLocation" title="https://qaecy.com/dev/ont#hasFileLocation">
-         <span>has file location</span>
-      </a>
+      <a href="#hasFileLocation" title="https://qaecy.com/dev/ont#hasFileLocation">has file location</a>
    </li>
    <li>
       <a href="#hasMaterial" title="https://qaecy.com/dev/ont#hasMaterial">
@@ -215,19 +152,13 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#hasProperty" title="https://qaecy.com/dev/ont#hasProperty">
-         <span>has property</span>
-      </a>
+      <a href="#hasProperty" title="https://qaecy.com/dev/ont#hasProperty">has property</a>
    </li>
    <li>
-      <a href="#mentions" title="https://qaecy.com/dev/ont#mentions">
-         <span>mentions</span>
-      </a>
+      <a href="#mentions" title="https://qaecy.com/dev/ont#mentions">mentions</a>
    </li>
    <li>
-      <a href="#mimeCategory" title="https://qaecy.com/dev/ont#mimeCategory">
-         <span>mime category</span>
-      </a>
+      <a href="#mimeCategory" title="https://qaecy.com/dev/ont#mimeCategory">mime category</a>
    </li>
    <li>
       <a href="#relatedEntity" title="https://qaecy.com/dev/ont#relatedEntity">
@@ -235,14 +166,10 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#relatedFormalClass" title="https://qaecy.com/dev/ont#relatedFormalClass">
-         <span>related formal class</span>
-      </a>
+      <a href="#relatedFormalClass" title="https://qaecy.com/dev/ont#relatedFormalClass">related formal class</a>
    </li>
    <li>
-      <a href="#relatedFormalProperty" title="https://qaecy.com/dev/ont#relatedFormalProperty">
-         <span>related formal property</span>
-      </a>
+      <a href="#relatedFormalProperty" title="https://qaecy.com/dev/ont#relatedFormalProperty">related formal property</a>
    </li>
    <li>
       <a href="#remoteProviderType" title="https://qaecy.com/dev/ont#remoteProviderType">
@@ -260,19 +187,13 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#resolvesTo" title="https://qaecy.com/dev/ont#resolvesTo">
-         <span>resolves to</span>
-      </a>
+      <a href="#resolvesTo" title="https://qaecy.com/dev/ont#resolvesTo">resolves to</a>
    </li>
    <li>
-      <a href="#selectorObject" title="https://qaecy.com/dev/ont#selectorObject">
-         <span>selector object</span>
-      </a>
+      <a href="#selectorObject" title="https://qaecy.com/dev/ont#selectorObject">selector object</a>
    </li>
    <li>
-      <a href="#selectorSubject" title="https://qaecy.com/dev/ont#selectorSubject">
-         <span>selector subject</span>
-      </a>
+      <a href="#selectorSubject" title="https://qaecy.com/dev/ont#selectorSubject">selector subject</a>
    </li>
    <li>
       <a href="#startDate" title="https://qaecy.com/dev/ont#startDate">
@@ -283,29 +204,19 @@ This ontology has the following classes and properties.</span>
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     class="hlist">
    <li>
-      <a href="#dateCreated" title="https://qaecy.com/dev/ont#dateCreated">
-         <span>date created</span>
-      </a>
+      <a href="#dateCreated" title="https://qaecy.com/dev/ont#dateCreated">date created</a>
    </li>
    <li>
-      <a href="#dateDeleted" title="https://qaecy.com/dev/ont#dateDeleted">
-         <span>date deleted</span>
-      </a>
+      <a href="#dateDeleted" title="https://qaecy.com/dev/ont#dateDeleted">date deleted</a>
    </li>
    <li>
-      <a href="#dateModified" title="https://qaecy.com/dev/ont#dateModified">
-         <span>date modified</span>
-      </a>
+      <a href="#dateModified" title="https://qaecy.com/dev/ont#dateModified">date modified</a>
    </li>
    <li>
-      <a href="#explicit" title="https://qaecy.com/dev/ont#explicit">
-         <span>explicit</span>
-      </a>
+      <a href="#explicit" title="https://qaecy.com/dev/ont#explicit">explicit</a>
    </li>
    <li>
-      <a href="#filePath" title="https://qaecy.com/dev/ont#filePath">
-         <span>file path</span>
-      </a>
+      <a href="#filePath" title="https://qaecy.com/dev/ont#filePath">file path</a>
    </li>
    <li>
       <a href="#suffix" title="https://qaecy.com/dev/ont#suffix">
@@ -313,9 +224,7 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#label" title="https://qaecy.com/dev/ont#label">
-         <span>label</span>
-      </a>
+      <a href="#label" title="https://qaecy.com/dev/ont#label">label</a>
    </li>
    <li>
       <a href="#language" title="https://qaecy.com/dev/ont#language">
@@ -338,63 +247,80 @@ This ontology has the following classes and properties.</span>
       </a>
    </li>
    <li>
-      <a href="#openFormat" title="https://qaecy.com/dev/ont#openFormat">
-         <span>open format</span>
+      <a href="#openFormat" title="https://qaecy.com/dev/ont#openFormat">open format</a>
+   </li>
+   <li>
+      <a href="#regex" title="https://qaecy.com/dev/ont#regex">regex</a>
+   </li>
+   <li>
+      <a href="#remoteProviderId" title="https://qaecy.com/dev/ont#remoteProviderId">remote provider id</a>
+   </li>
+   <li>
+      <a href="#remoteRelativePath" title="https://qaecy.com/dev/ont#remoteRelativePath">remote relative path</a>
+   </li>
+   <li>
+      <a href="#sizeBytes" title="https://qaecy.com/dev/ont#sizeBytes">size bytes</a>
+   </li>
+   <li>
+      <a href="#tableGrid" title="https://qaecy.com/dev/ont#tableGrid">table grid</a>
+   </li>
+   <li>
+      <a href="#tag" title="https://qaecy.com/dev/ont#tag">tag</a>
+   </li>
+   <li>
+      <a href="#textRaw" title="https://qaecy.com/dev/ont#textRaw">text raw</a>
+   </li>
+   <li>
+      <a href="#textSummary" title="https://qaecy.com/dev/ont#textSummary">text summary</a>
+   </li>
+   <li>
+      <a href="#value" title="https://qaecy.com/dev/ont#value">value</a>
+   </li>
+   <li>
+      <a href="#visibleForExtraction" title="https://qaecy.com/dev/ont#visibleForExtraction">visible for extraction</a>
+   </li>
+</ul><h4>Annotation Properties</h4><ul xmlns:widoco="https://w3id.org/widoco/vocab#"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    class="hlist">
+   <li>
+      <a href="#http://purl.org/dc/terms/conformsTo" title="http://purl.org/dc/terms/conformsTo">
+         <span>conforms To</span>
       </a>
    </li>
    <li>
-      <a href="#regex" title="https://qaecy.com/dev/ont#regex">
-         <span>regex</span>
+      <a href="#http://purl.org/dc/terms/creator" title="http://purl.org/dc/terms/creator">
+         <span>creator</span>
       </a>
    </li>
    <li>
-      <a href="#remoteProviderId" title="https://qaecy.com/dev/ont#remoteProviderId">
-         <span>remote provider id</span>
+      <a href="#http://purl.org/dc/terms/description" title="http://purl.org/dc/terms/description">
+         <span>description</span>
       </a>
    </li>
    <li>
-      <a href="#remoteRelativePath" title="https://qaecy.com/dev/ont#remoteRelativePath">
-         <span>remote relative path</span>
+      <a href="#http://schema.org/domainIncludes" title="http://schema.org/domainIncludes">
+         <span>domain Includes</span>
       </a>
    </li>
    <li>
-      <a href="#sizeBytes" title="https://qaecy.com/dev/ont#sizeBytes">
-         <span>size bytes</span>
+      <a href="#http://purl.org/dc/terms/modified" title="http://purl.org/dc/terms/modified">
+         <span>modified</span>
       </a>
    </li>
    <li>
-      <a href="#tableGrid" title="https://qaecy.com/dev/ont#tableGrid">
-         <span>table grid</span>
+      <a href="#http://purl.org/vocab/vann/preferredNamespacePrefix"
+         title="http://purl.org/vocab/vann/preferredNamespacePrefix">
+         <span>preferred Namespace Prefix</span>
       </a>
    </li>
    <li>
-      <a href="#tag" title="https://qaecy.com/dev/ont#tag">
-         <span>tag</span>
-      </a>
-   </li>
-   <li>
-      <a href="#textRaw" title="https://qaecy.com/dev/ont#textRaw">
-         <span>text raw</span>
-      </a>
-   </li>
-   <li>
-      <a href="#textSummary" title="https://qaecy.com/dev/ont#textSummary">
-         <span>text summary</span>
-      </a>
-   </li>
-   <li>
-      <a href="#value" title="https://qaecy.com/dev/ont#value">
-         <span>value</span>
+      <a href="#http://purl.org/dc/terms/title" title="http://purl.org/dc/terms/title">
+         <span>title</span>
       </a>
    </li>
    <li>
       <a href="#visibleForAgent" title="https://qaecy.com/dev/ont#visibleForAgent">
-         <span>visible for agent</span>
-      </a>
-   </li>
-   <li>
-      <a href="#visibleForExtraction" title="https://qaecy.com/dev/ont#visibleForExtraction">
-         <span>visible for extraction</span>
+         <span>visible For Agent</span>
       </a>
    </li>
 </ul><iframe src="webvowl/index.html"></iframe> 
